# multi-tenant-saas-backend

./: .env.example  .gitignore  README.md  pyproject.toml
app/: main.py
app/core/: config.py  dependencies.py  security.py
app/db/: base_class.py  session.py
app/models/: tenant.py  user.py
app/repositories/: tenant_repository.py  user_repository.py
